feat(condo): DOMA-9327: Support Select instead of template tabs in new news UI (#4939)
* feat(condo): DOMA-9327: Support Select instead of template tabs in new news UI

* feat(condo): DOMA-9327: Support searching on news category

* feat(condo): DOMA-9327: Use feature flags to get new templates

* fix(condo): HOTFIX: Fix UX on default condition

* fix(condo): HOTFIX: Fix code warnings

* fix(condo): HOTFIX: Fixes on self review

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1667,6 +1667,7 @@
   "news.fields.text.label": "News text",
   "news.fields.address.label": "Select addressees",
   "news.fields.period.label": "Select the sending time",
+  "news.fields.template.placeholder": "Select template",
   "news.fields.templateBody.error": "Fill blanks in the template before sending",
   "news.fields.emptyTemplate.title": "Without template",
   "news.fields.validBefore.error": "Time for sending news does not match the validBefore. Change the validBefore to send the news.",
