fix(condo): DOMA-9620 meter section bug fixes (#4951)
* fix(condo): DOMA-9620 fixed delete meter button translation

* fix(condo): DOMA-9620 removed import button on property meter readings tab

* feat(condo): DOMA-9620 redirect with address and unit name filled if no meter for this address

* feat(condo): DOMA-9620 refetch readings count after deleting readings and show EmptyListContent

* feat(condo): DOMA-9620 added placeholders for inputs when creating meter

* fix(condo): DOMA-9620 route fixes for cc

* feat(condo): DOMA-9620 made date pickers fit all placeholders

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1050,6 +1050,7 @@
   "pages.condo.meter.MeterReading.DeleteMeterReadings": "Delete readings",
   "pages.condo.meter.MeterReading.DeleteMeterReadings.Warn": "It will be impossible to restore them. But you can enter them again.",
   "pages.condo.meter.Meter.DeleteMeter": "Do you want to delete metering device?",
+  "pages.condo.meter.Meter.DeleteMeter.button": "Delete device",
   "pages.condo.meter.Meter.DeleteMeter.Warn": "You won't be able to restore it but can add a new one",
   "pages.condo.meter.Meter.isActive": "Active",
   "pages.condo.meter.Meter.outOfOrder": "Out of order",
@@ -1066,6 +1067,8 @@
   "pages.condo.meter.archivedMeterTip.NotShowing": "is not shown",
   "pages.condo.meter.MeterWithSameNumberIsExist": "Meter with same number exist in organization",
   "pages.condo.meter.MeterWithSameAccountNumberIsExist": "Such a account number already exists in another unit",
+  "pages.condo.meter.Resource.placeholder": "Specify the type of meter",
+  "pages.condo.meter.Place.placeholder": "Specify where the meter is installed",
   "pages.condo.meter.TariffsNumber": "Number of tariffs",
   "pages.condo.meter.InstallationDate": "Date of installation",
   "pages.condo.meter.CommissioningDate": "Date of commissioning",
