--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1050,6 +1050,7 @@
   "pages.condo.meter.MeterReading.DeleteMeterReadings": "Удалить показания",
   "pages.condo.meter.MeterReading.DeleteMeterReadings.Warn": "Восстановить их будет нельзя. Но можно ввести заново.",
   "pages.condo.meter.Meter.DeleteMeter": "Вы хотите удалить прибор учета?",
+  "pages.condo.meter.Meter.DeleteMeter.button": "Удалить счетчик",
   "pages.condo.meter.Meter.DeleteMeter.Warn": "Его нельзя будет восстановить, но можно будет добавить новый",
   "pages.condo.meter.Meter.isActive": "Активен",
   "pages.condo.meter.Meter.outOfOrder": "Выведен из работы",
@@ -1066,6 +1067,8 @@
   "pages.condo.meter.archivedMeterTip.NotShowing": "не отображается",
   "pages.condo.meter.MeterWithSameNumberIsExist": "Прибор учета с таким номером уже существует в организации",
   "pages.condo.meter.MeterWithSameAccountNumberIsExist": "Такой лицевой счет уже существует в другой квартире",
+  "pages.condo.meter.Resource.placeholder": "Укажите тип счетчика",
+  "pages.condo.meter.Place.placeholder": "Укажите, где установлен счетчик",
   "pages.condo.meter.TariffsNumber": "Количество тарифов",
   "pages.condo.meter.InstallationDate": "Дата установки",
   "pages.condo.meter.CommissioningDate": "Дата ввода в эксплуатацию",
