chore(condo): DOMA-9658 allow import the resource named "cold air" (#4972)

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1796,6 +1796,7 @@
   "meter.import.value.meterResourceType.electricity": "EL",
   "meter.import.value.meterResourceType.heatSupply": "HEAT",
   "meter.import.value.meterResourceType.gasSupply": "GAS",
+  "meter.import.value.meterResourceType.coldAir": "COLD",
   "ticket.import.column.address": "Address",
   "ticket.import.column.unitName": "Unit Name",
   "ticket.import.column.isResidentTicket": "Is resident ticket",
