feat(condo): DOMA-8525 allow to restrict send meter readings (#4982)
* feat(condo): DOMA-8525 allow meter to be automatic without b2b-app

* feat(condo): DOMA-8525 ability to set Meter.isAutomatic via meters import

* feat(condo): DOMA-8525 fix tests for rows transformation

* feat(condo): DOMA-8525 Test was improved

Add testing of case when we need to keep existing value for isAutomatic if this value is not passed ti mutation

* feat(condo): DOMA-8525 Fix test with Excel files

* feat(condo): DOMA-8525 remove unused fields

* feat(condo): DOMA-8525 localized values for isAutomatic field

* feat(condo): DOMA-8525 improve tests

* feat(condo): DOMA-8525 comment improved

* feat(condo): DOMA-8525 logic improved a bit

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1782,6 +1782,7 @@
   "meter.import.column.SealingDate": "Sealing date",
   "meter.import.column.ControlReadingsDate": "Control readings date",
   "meter.import.column.MeterPlace": "Meter place",
+  "meter.import.column.Automatic": "Automatic",
   "meter.import.error.MeterAccountNumberExistInOtherUnit": "Meter with such account number exists in another unit",
   "meter.import.error.MeterNumberExistInOrganization": "Meter with this number already exists in your organization",
   "meter.import.error.MeterResourceNotFound": "Meter type was not found according to specified abbreviation in \"Type\" column",
@@ -1790,6 +1791,7 @@
   "meter.import.error.WrongDateOrMonthFormatMessage": "Wrong date format in column \"{columnName}\". Use either value of String formats \"{dateFormat}\" or \"{monthFormat}\" (for month-only); or value of Date type",
   "meter.import.error.unknownResourceType": "Unknown resource type. Please use one of the following: {knownList}",
   "meter.import.error.unknownUnitType": "Unknown unit type. Please use one of the following: {knownList}",
+  "meter.import.error.unknownIsAutomatic": "Unknown value for Automatic. Please use one of the following: {knownList}",
   "meter.import.error.ZeroValuesSpecified": "At least one of values must be specified",
   "meter.import.error.AccountNumberInvalidValue": "Account number field is filled incorrectly",
   "meter.import.error.MeterNumberInvalidValue": "Meter number field is filled incorrectly",
