--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1782,6 +1782,7 @@
   "meter.import.column.SealingDate": "Дата опломбирования",
   "meter.import.column.ControlReadingsDate": "Дата контрольных показаний",
   "meter.import.column.MeterPlace": "Место установки счетчика",
+  "meter.import.column.Automatic": "Автоматический",
   "meter.import.error.MeterAccountNumberExistInOtherUnit": "Прибор учета с таким лицевым счетом уже существует в другой квартире",
   "meter.import.error.MeterNumberExistInOrganization": "Прибор учета с таким номером уже существует в вашей организации",
   "meter.import.error.MeterResourceNotFound": "Не найден тип счётчика по указанной аббревиатуре",
@@ -1790,6 +1791,7 @@
   "meter.import.error.WrongDateOrMonthFormatMessage": "Неверное значение даты в столбце \"{columnName}\". Используйте значение с типом Строка в форматах \"{dateFormat}\" или \"{monthFormat}\" (для указания только месяца); либо значение с типом Дата",
   "meter.import.error.unknownResourceType": "Неизвестный тип счетчика. Используйте один из списка: {knownList}",
   "meter.import.error.unknownUnitType": "Неизвестный тип помещения. Используйте один из списка: {knownList}",
+  "meter.import.error.unknownIsAutomatic": "Неизвестное значение в поле \"Автоматический\". Используйте одно из списка: {knownList}",
   "meter.import.error.ZeroValuesSpecified": "Должно быть указано как минимум одно из показаний",
   "meter.import.error.AccountNumberInvalidValue": "Указан некорректный лицевой счет",
   "meter.import.error.MeterNumberInvalidValue": "Указан некорректный номер счетчика",
