fix(condo): DOMA-9780 fix translations so that mob app could take translations directly from the entity (#5017)

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1745,13 +1745,13 @@
   "meterResource.GasSupply.name": "Gas supply",
   "meterResource.ColdAir.name": "Cold air supply",
   "meterResource.Drainage.name": "Drainage",
-  "meterResource.ColdWater.measure": "cubic meter",
-  "meterResource.HotWater.measure": "cubic meter",
-  "meterResource.Electricity.measure": "kw",
-  "meterResource.HeatSupply.measure": "gcal",
-  "meterResource.GasSupply.measure": "cubic meter",
-  "meterResource.ColdAir.measure": "gcal",
-  "meterResource.Drainage.measure": "cubic meter",
+  "meterResource.ColdWater.measure": "m³",
+  "meterResource.HotWater.measure": "m³",
+  "meterResource.Electricity.measure": "kWh",
+  "meterResource.HeatSupply.measure": "Gcal",
+  "meterResource.GasSupply.measure": "m³",
+  "meterResource.ColdAir.measure": "Gcal",
+  "meterResource.Drainage.measure": "m³",
   "contact.AddContact": "Add contact",
   "meter.AddMeterReadings": "Add meter readings",
   "meter.AddPropertyMeterReadings": "Add property meter readings",
