--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1745,13 +1745,13 @@
   "meterResource.GasSupply.name": "Газоснабжение",
   "meterResource.ColdAir.name": "Холодоснабжение",
   "meterResource.Drainage.name": "ЖБО",
-  "meterResource.ColdWater.measure": "куб. м.",
-  "meterResource.HotWater.measure": "куб. м.",
-  "meterResource.Electricity.measure": "кВт",
+  "meterResource.ColdWater.measure": "м³",
+  "meterResource.HotWater.measure": "м³",
+  "meterResource.Electricity.measure": "кВт⋅ч",
   "meterResource.HeatSupply.measure": "Гкал",
-  "meterResource.GasSupply.measure": "куб. м.",
+  "meterResource.GasSupply.measure": "м³",
   "meterResource.ColdAir.measure": "Гкал",
-  "meterResource.Drainage.measure": "куб. м.",
+  "meterResource.Drainage.measure": "м³",
   "contact.AddContact": "Добавить жителя",
   "meter.AddMeterReadings": "Сдать показания ИПУ",
   "meter.AddPropertyMeterReadings": "Сдать показания ОДПУ",
