feat(condo): DOMA-9196 added MarketSetting (#4957)
* feat(condo): DOMA-9196 temp com mit

* fix(condo): DOMA-9195 temp commit

* fix(condo): DOMA-9196 temp commit

* feat(condo): DOMA-9196 front end

* feat(condo): DOMA-9196 add check MarketSetting in RegisterResidentInvoiceService

* fix(condo): DOMA-9196 display market tab only for org with finished invoiceStatus in acqContext

* fix(condo): DOMA-9196 add UPDATE for OrganizationEmployeeRole and fix code after lint

* fix(condo): DOMA-9196 display market tab only for org with finished invoiceStatus in acqContext

* fix(condo): DOMA-9196 display market tab only for org with finished invoiceStatus in acqContext

* refactor(condo): DOMA-9196 make market setting page similar to mobile feature config cards

* fix(condo): DOMA-9196 create marketSetting after AcquiringIntegrationContext update with invoiceStatus === "Finished"

* fix(condo): DOMA-9196 regenerate migration file

* fix(condo): DOMA-9196 fixes after review

* test(condo): DOMA-9196 fix test 'can\'t create invoice with prohibited invoicePaymentType'

* fix(condo): DOMA-9196 fixes after review

* test(condo): DOMA-9196 fix test 'marketSetting create after invoiceStatus === finished'

* chore(condo): DOMA-9196 regenerate migration file

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1223,6 +1223,12 @@
   "pages.condo.settings.barItem.MobileFeatureConfig.OnlyProgressionMeterReadings.isEnabled": "Accept meter readings only more than the previous ones",
   "pages.condo.settings.mobileFeatureConfig.OnlyProgressionMeterReadings.messageAboutFeat": "Enabling this restriction prevents residents from transmitting meter readings if they are less than the previous ones. If a resident submitted last month, for example, electricity meter readings of 100 kW, then this month he will not be able to transmit readings less than 100.",
   "pages.condo.settings.mobileFeatureConfig.OnlyProgressionMeterReadings.isEnabled": "Residents cannot report less than previous readings",
+  "pages.condo.settings.marketplace.paymentTypesAbout.label": "Payment methods for paid services",
+  "pages.condo.settings.marketplace.paymentTypesAbout.description.message": "Enabling this restriction prevents residents from selecting a cash payment option in the mobile app.\nThe dispatcher will be able to choose any payment method, regardless of this setting.",
+  "pages.condo.settings.marketplace.pageTitle": "Marketplace settings",
+  "pages.condo.settings.marketplace.cashCheckbox.label": "Residents cannot choose cash payment method",
+  "pages.condo.settings.marketplace.paymentTypesSetting.title": "Cash payment in the marketplace",
+  "pages.condo.settings.marketplace.paymentTypesSetting.label": "Disable cash payment method selection",
   "pages.condo.profile.interfaceLanguage": "Language",
   "pages.condo.profile.chooseInterfaceLanguage": "Choose language",
   "pages.condo.profile.globalHints": "Hints in sections",
@@ -3106,6 +3112,7 @@
   "api.marketplace.invoice.error.emptyRows": "The invoice contains no rows",
   "api.marketplace.invoice.error.rows.count": "Count can't be less than 1. Check line {rowNumber}.",
   "api.marketplace.invoice.error.rows.toPay": "Price can't be less than 0. Check line {rowNumber}.",
+  "api.marketplace.invoice.error.prohibitedPaymentType": "This payment method is prohibited in the selected organization",
   "api.marketplace.MarketItemPrice.error.INVALID_SALES_TAX_PERCENT": "Sales tax must be positive, but not more than 100. Check line {rowNumber}.",
   "api.marketplace.MarketItemPrice.error.INVALID_PRICE": "The price cannot be less than 0. Check line {rowNumber}.",
   "api.marketplace.MarketItemPrice.error.EMPTY_PRICE": "Price cannot be empty.",
