--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1223,6 +1223,12 @@
   "pages.condo.settings.barItem.MobileFeatureConfig.OnlyProgressionMeterReadings.isEnabled": "Принимать показания только больше предыдущих",
   "pages.condo.settings.mobileFeatureConfig.OnlyProgressionMeterReadings.messageAboutFeat": "Включение этого ограничения не дает жителям передать показания индивидуального прибора учета, если они меньше предыдущих. Если житель в прошлом месяце передал, например, показания счетчика электроэнергии 100 кВт, то в этом месяце он не сможет передать показания меньше 100.",
   "pages.condo.settings.mobileFeatureConfig.OnlyProgressionMeterReadings.isEnabled": "Жители не могут передавать показания меньше предыдущих",
+  "pages.condo.settings.marketplace.paymentTypesAbout.label": "Способы оплаты за платные услуги",
+  "pages.condo.settings.marketplace.paymentTypesAbout.description.message": "Включение этого ограничения не дает жителям выбрать способ оплаты наличными в мобильном приложении.\nДиспетчер сможет выбрать любой способ оплаты, не зависимо от этой настройки.",
+  "pages.condo.settings.marketplace.pageTitle": "Настройки Маркетплейса",
+  "pages.condo.settings.marketplace.cashCheckbox.label": "Жители не могут выбрать способ оплаты наличными",
+  "pages.condo.settings.marketplace.paymentTypesSetting.title": "Оплата наличными в маркетплейсе",
+  "pages.condo.settings.marketplace.paymentTypesSetting.label": "Отключить выбор способа оплаты наличными",
   "pages.condo.profile.interfaceLanguage": "Язык интерфейса",
   "pages.condo.profile.chooseInterfaceLanguage": "Выберите язык интерфейса",
   "pages.condo.profile.globalHints": "Подсказки в разделах",
@@ -3106,6 +3112,7 @@
   "api.marketplace.invoice.error.emptyRows": "Счет не содержит товаров/услуг",
   "api.marketplace.invoice.error.rows.count": "Количество не может быть меньше 1. Проверьте строку {rowNumber}.",
   "api.marketplace.invoice.error.rows.toPay": "Цена не может быть меньше 0. Проверьте строку {rowNumber}.",
+  "api.marketplace.invoice.error.prohibitedPaymentType": "Этот способ оплаты запрещен в выбранной организации",
   "api.marketplace.MarketItemPrice.error.INVALID_SALES_TAX_PERCENT": "Налог с продажи должен быть положительным, но не больше 100. Проверьте строку {rowNumber}.",
   "api.marketplace.MarketItemPrice.error.INVALID_PRICE": "Цена не может быть меньше 0. Проверьте строку {rowNumber}.",
   "api.marketplace.MarketItemPrice.error.EMPTY_PRICE": "Цена не может быть пустой.",
