fix(condo): DOMA-7397 fix UI bugs new news (#5016)
* fix(condo): DOMA-7397 new history commit

* fix(condo): DOMA-7397 revision of comments

* fix(condo): DOMA-7397 fix code style

* fix(condo): DOMA-7397 fix code style else

* fix(condo): DOMA-7397 fix en translate

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1677,7 +1677,8 @@
   "news.fields.address.label": "Select addressees",
   "news.fields.period.label": "Select the sending time",
   "news.fields.template.placeholder": "Select template",
-  "news.fields.templateBody.error": "Fill blanks in the template before sending",
+  "news.fields.template.blanksNotFilledError": "Fill blanks in the template before sending",
+  "news.filed.shareNews.button": "Send news",
   "news.fields.emptyTemplate.title": "Without template",
   "news.fields.validBefore.error": "Time for sending news does not match the validBefore. Change the validBefore to send the news.",
   "news.fields.toManyMessages.error": "We recommend sending no more than five news per day so as not to bore residents. It is better to postpone sending it until tomorrow.",
@@ -1995,8 +1996,11 @@
   "notification.messages.SEND_DAILY_STATISTICS.email.allProperties": "All properties ({organization})",
   "notification.messages.SEND_DAILY_STATISTICS.email.moreProperties": "and more {more} properties",
   "notification.messages.SEND_DAILY_STATISTICS.email.moreIncidents": "and more {more} incidents",
+  "news.ConfirmSendTitle": "Ready to Send News?",
+  "news.ConfirmSendMessage": "Once sent, you won't be able to completely delete the news item",
   "news.ConfirmDeleteTitle": "Delete news?",
   "news.ConfirmDeleteMessage": "It cannot be restored. But you can recreate it.",
+  "news.CancelSendMessage": "Cancel",
   "news.CancelMessage": "Keep",
   "TicketDeadline": "Ticket deadline",
   "TicketDeferredDeadline": "Ticket deferred deadline",
