--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1677,7 +1677,8 @@
   "news.fields.address.label": "Выберите адресатов",
   "news.fields.period.label": "Выберите время отправки",
   "news.fields.template.placeholder": "Выберите шаблон",
-  "news.fields.templateBody.error": "Заполните пропуски в шаблоне перед отправкой",
+  "news.fields.template.blanksNotFilledError": "Заполните пропуски в шаблоне перед отправкой",
+  "news.filed.shareNews.button": "Отправить новость",
   "news.fields.emptyTemplate.title": "Без шаблона",
   "news.fields.validBefore.error": "Время отправки новости не совпадает со сроком ее актуальности. Измените срок, чтобы отправить новость.",
   "news.fields.toManyMessages.error": "Мы рекомендуем отправлять не более 5 новостей в день, чтобы не докучать жителям. Лучше отложить отправку на завтра.",
@@ -1995,8 +1996,11 @@
   "notification.messages.SEND_DAILY_STATISTICS.email.allProperties": "Все дома ({organization})",
   "notification.messages.SEND_DAILY_STATISTICS.email.moreProperties": "и еще {more} домов",
   "notification.messages.SEND_DAILY_STATISTICS.email.moreIncidents": "и еще {more} отключений",
+  "news.ConfirmSendTitle": "Вы точно хотите отправить новость?",
+  "news.ConfirmSendMessage": "Отменить отправку будет нельзя",
   "news.ConfirmDeleteTitle": "Удалить новость?",
   "news.ConfirmDeleteMessage": "Восстановить ее будет нельзя. Но можно создать заново.",
+  "news.CancelSendMessage": "Не отправлять",
   "news.CancelMessage": "Оставить",
   "TicketDeadline": "Срок выполнения заявки",
   "TicketDeferredDeadline": "Срок отложенности заявки",
