feat(condo): DOMA-9742 match tariffs count with values count for meter readings (#5006)
* feat(condo): DOMA-9742 match tariffs count with values count for meter readings

* feat(condo): DOMA-9742 check the same for PropertyMeterReading

* feat(condo): DOMA-9742 also checking for extra values

* feat(condo): DOMA-9742 fix test

* feat(condo): DOMA-9742 validation: the number of values should equal to numberOfTariffs

* feat(condo): DOMA-9742 cc submodule

* feat(condo): DOMA-9742 reduce replaced by for-loop

* feat(condo): DOMA-9742 Move number of values to constants

* feat(condo): DOMA-9742 Unused imports were removed after rebasing

* feat(condo): DOMA-9742 rename constants

* feat(condo): DOMA-9742 fix getting of fields from objects

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2644,6 +2644,8 @@
   "api.meter.registerMetersReadings.INVALID_METER_VALUES": "Invalid values: {valuesList}",
   "api.meter.registerMetersReadings.MULTIPLE_METERS_FOUND": "Multiple meters found ({count})",
   "api.meterReading.METER_READING_DATE_IN_FUTURE": "Reading date ({givenDate}) can not be from the future",
+  "api.meterReading.METER_READING_FEW_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please fill next fields: {fieldsNames}",
+  "api.meterReading.METER_READING_EXTRA_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please remove next fields: {fieldsNames}",
   "api.marketplace.MarketCategory.MAXIMUM_DEPTH_REACHED": "The depth of category inheritance should be no more than 2",
   "api.marketplace.MarketCategory.CANNOT_CONNECT_TO_ITSELF": "Cannot connect to itself",
   "api.contact.exportContactsToExcel.NOTHING_TO_EXPORT": "No contacts found for export",
