chore: INFRA-414 update doc links (#5069)

--- a/apps/dev-portal/docs/api/playground.ru.mdx
+++ b/apps/dev-portal/docs/api/playground.ru.mdx
@@ -8,7 +8,7 @@ API Playground – это [интерактивный интерфейс](https:
 
 Для того чтобы начать работу с API Playground необходимо зарегистрироваться на тестовом стенде.
 
-1. Для этого перейдите по [ссылке на тестовый стенд](https://condo.d.doma.a) и зарегистрируйтесь.
+1. Для этого перейдите по [ссылке на тестовый стенд](https://condo.d.doma.ai) и зарегистрируйтесь.
 
 <Alert type="warning">
     Обязательно укажите почту, так как именно она будет использована для авторизации ниже
