--- a/apps/dev-portal/docs/api/playground.en.mdx
+++ b/apps/dev-portal/docs/api/playground.en.mdx
@@ -8,7 +8,7 @@ as well as how to explore the different API methods yourself. You can read more 
 
 In order to start working with the Playground API, you need to register at the test stand.
 
-1. To do this, go to the [test stand site](https://condo.d.doma.a) and register.
+1. To do this, go to the [test stand site](https://condo.d.doma.ai) and register.
 
 <Alert type="warning">
     Be sure to specify your email, as it will be used for authorization below.
