feat(condo): DOMA-9935 add minimum amount settings to acquiring integration (#5171)
* feat(condo): DOMA-9935 wip

* feat(condo): DOMA-9935 added tests

* feat(condo): DOMA-9935 wip

* feat(condo): DOMA-9935 added tests

* feat(condo): DOMA-9935 changed error names

* fix(condo): DOMA-9935 fixed code style

* fix`(condo): DOMA-9935 fix review

* fix object comarision

* feat(condo): DOMA-9935 add migration

* fix(condo): DOMA-9935 fix imports

---------

Co-authored-by: Владимир <vladimir@vfadeev.local>
Co-authored-by: Dmitry Kovyazin <dkoviazin@gmail.com>

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -3134,6 +3134,7 @@
   "acquiringReceipt.invoice.row.count": "Кол-во",
   "acquiringReceipt.invoice.row.vatPercent": "НДС",
   "acquiringReceipt.invoice.row.amount": "Стоимость",
-  "api.acquiring.multiPayment.error.receiptsWithInvoices": "Квитанции и счета не могут быть в одном платеже, увы. Но мы над этим работаем."
+  "api.acquiring.multiPayment.error.receiptsWithInvoices": "Квитанции и счета не могут быть в одном платеже, увы. Но мы над этим работаем.",
+  "api.acquiring.payment.error.paymentAmountLessThanMinimum": "Сумма оплаты должна быть не меньше чем {minimumPaymentAmount}"
 }
 
