--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -3134,6 +3134,7 @@
   "acquiringReceipt.invoice.row.count": "Count",
   "acquiringReceipt.invoice.row.vatPercent": "VAT",
   "acquiringReceipt.invoice.row.amount": "Amount",
-  "api.acquiring.multiPayment.error.receiptsWithInvoices": "Receipts and invoices are forbidden to be together"
+  "api.acquiring.multiPayment.error.receiptsWithInvoices": "Receipts and invoices are forbidden to be together",
+  "api.acquiring.payment.error.paymentAmountLessThanMinimum": "Payment amount must be at least {minimumPaymentAmount}"
 }
 
