feat(condo): DOMA-9988 add ux property gate before news item is created (#5193)
* feat(condo): add ux property gate before news item is created

* fix(condo): remove console.log

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -651,6 +651,7 @@
   "pages.condo.property.form.AreaSuffix": "sq. m.",
   "pages.condo.property.form.YearPlaceholder": "2016",
   "pages.condo.property.id.PageTitle": "Property",
+  "pages.condo.property.form.SuccessNotification": "Property {address} was added successfully",
   "pages.condo.property.id.NotFound.PageTitle": "Property not found",
   "pages.condo.property.id.NotFound.Message": "Property with this ID is not in your organization",
   "pages.condo.property.id.Square": "Square",
@@ -1422,6 +1423,8 @@
   "pages.condo.news.index.field.date.sending": "Sending",
   "pages.condo.news.index.emptyList.header": "No news yet",
   "pages.condo.news.index.emptyList.title": "Shall we add the first news right now?",
+  "pages.condo.news.index.propertyGate.header": "To create news you should add your properties",
+  "pages.condo.news.index.propertyGate.title": "Shall we add the first property now?",
   "pages.condo.news.settings.pageTitle": "Settings",
   "pages.condo.news.settings.sharingAppSettingsTitle": "Select sharing apps",
   "pages.condo.news.settings.appCard.description": "Send your news to {sharingAppName}",
