--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -651,6 +651,7 @@
   "pages.condo.property.form.AreaSuffix": "кв. м.",
   "pages.condo.property.form.YearPlaceholder": "2016",
   "pages.condo.property.id.PageTitle": "Объект",
+  "pages.condo.property.form.SuccessNotification": "Дом по адресу {address} был успешно добавлен",
   "pages.condo.property.id.NotFound.PageTitle": "Дом не найден",
   "pages.condo.property.id.NotFound.Message": "Дома с данным ID нет в вашей организации",
   "pages.condo.property.id.Square": "Площадь",
@@ -1422,6 +1423,8 @@
   "pages.condo.news.index.field.date.sending": "Отправляется",
   "pages.condo.news.index.emptyList.header": "Пока новостей нет",
   "pages.condo.news.index.emptyList.title": "Добавим первую новость прямо сейчас?",
+  "pages.condo.news.index.propertyGate.header": "Чтобы отправить новость нужно добавить хотя бы один дом",
+  "pages.condo.news.index.propertyGate.title": "Добавим первый дом сейчас?",
   "pages.condo.news.settings.pageTitle": "Настройки",
   "pages.condo.news.settings.sharingAppSettingsTitle": "Выберите каналы отправки",
   "pages.condo.news.settings.appCard.description": "Отправка новостей в {sharingAppName}",
