feat(condo) DOMA-9326 Let users delete published and sent news items (#4992)
* feat(condo) DOMA-9326: Add validBefore support on creating

* feat(condo): DOMA-9326: allow users to delete sent news items using validBefore field

* refator(condo): DOMA-9326: fix translations

* refactor(condo): fixes on comments + updates from new ts

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2002,6 +2002,9 @@
   "news.ConfirmDeleteTitle": "Delete news?",
   "news.ConfirmDeleteMessage": "It cannot be restored. But you can recreate it.",
   "news.CancelSendMessage": "Cancel",
+  "news.DeprecateTitle": "Depreacate",
+  "news.ConfirmDeprecateTitle": "Deprecate sent news",
+  "news.ConfirmDeprecateMessage": "Publication will be marked as deprecated. You will not be able to restore it, but you will be able to recreate it",
   "news.CancelMessage": "Keep",
   "TicketDeadline": "Ticket deadline",
   "TicketDeferredDeadline": "Ticket deferred deadline",
