--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2002,6 +2002,9 @@
   "news.ConfirmDeleteTitle": "Удалить новость?",
   "news.ConfirmDeleteMessage": "Восстановить ее будет нельзя. Но можно создать заново.",
   "news.CancelSendMessage": "Не отправлять",
+  "news.DeprecateTitle": "Сделать неактуальной",
+  "news.ConfirmDeprecateTitle": "Сделать новость неактуальной",
+  "news.ConfirmDeprecateMessage": "Новость пропадет с главного экрана мобильного приложения – останется в push-уведомлениях и архиве",
   "news.CancelMessage": "Оставить",
   "TicketDeadline": "Срок выполнения заявки",
   "TicketDeferredDeadline": "Срок отложенности заявки",
