feat(condo): DOMA-10237 added maximum payment amount in acquiring integration (#5257)
* feat(condo): DOMA-10237

* feat(condo): DOMA-10237 in progress

* fix(condo): DOMA-10237 console log

---------

Co-authored-by: Владимир <vladimir@vfadeev.local>

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -3141,6 +3141,7 @@
   "acquiringReceipt.invoice.row.vatPercent": "НДС",
   "acquiringReceipt.invoice.row.amount": "Стоимость",
   "api.acquiring.multiPayment.error.receiptsWithInvoices": "Квитанции и счета не могут быть в одном платеже, увы. Но мы над этим работаем.",
-  "api.acquiring.payment.error.paymentAmountLessThanMinimum": "Сумма оплаты должна быть не меньше чем {minimumPaymentAmount}"
+  "api.acquiring.payment.error.paymentAmountLessThanMinimum": "Сумма оплаты должна быть не меньше чем {minimumPaymentAmount}",
+  "api.acquiring.payment.error.paymentAmountGreaterThanMaximum": "Сумма оплаты не должна превышать {maximumPaymentAmount}"
 }
 
