--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -3141,6 +3141,7 @@
   "acquiringReceipt.invoice.row.vatPercent": "VAT",
   "acquiringReceipt.invoice.row.amount": "Amount",
   "api.acquiring.multiPayment.error.receiptsWithInvoices": "Receipts and invoices are forbidden to be together",
-  "api.acquiring.payment.error.paymentAmountLessThanMinimum": "Payment amount must be at least {minimumPaymentAmount}"
+  "api.acquiring.payment.error.paymentAmountLessThanMinimum": "Payment amount must be at least {minimumPaymentAmount}",
+  "api.acquiring.payment.error.paymentAmountGreaterThanMaximum": "Payment amount must not exceed {maximumPaymentAmount}"
 }
 
