feat(condo): DOMA-10102 add column minFloor to PropertyMap in import excel file  (#5288)
* feat(condo): DOMA-10102 add column + add min floor for create propertyMap

* feat(condo): DOMA-10102 change maxFloor

* feat(condo): DOMA-10102 delete console.log and example excel

* feat(condo): DOMA-10102 fix ts error

* feat(condo): DOMA-10102 update preview and example excel file

* feat(condo): DOMA-10102 add logic calculation units on floor

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1699,6 +1699,7 @@
   "property.import.column.Units": "Units",
   "property.import.column.Sections": "Sections",
   "property.import.column.Floors": "Floors",
+  "property.import.column.MinFloor": "Minimal Floor",
   "EmployeeRoles": "Employee roles",
   "EmployeeRoles.availableTickets": "Which tickets the employee sees",
   "EmployeeRoles.availableTickets.allTickets": "all tickets",
