feat(condo): DOMA-9648 add new templates in model newsItemTemplate (#5265)
* feat(condo): DOMA-9648 save new fileds

* feat(condo): DOMA-9648 add enum for news categories

* feat(condo): DOMA-9648 add migration

* feat(condo): DOMA-9648 name = title

* feat(condo): DOMA-9648 change some variable name

* feat(condo): DOMA-9648 update number migration

* feat(condo): DOMA-9648 change news categories

* feat(condo): DOMA-9648 add translations and change migration

* feat(condo): DOMA-9648 update types

* feat(condo): DOMA-9648 update number migration

* feat(condo): DOMA-9648 update tests and gql queries

* feat(condo): DOMA-9648 update test filed category and translation

* feat(condo): DOMA-9648 final modifications

* feat(condo): DOMA-9648 fix sonarCloud

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1688,6 +1688,19 @@
   "news.fields.templates": "Templates",
   "news.fields.profanityInTitle.error": "Profanity in title detected",
   "news.fields.profanityInBody.error": "Profanity in body detected",
+  "news.template.category.water": "Water",
+  "news.template.category.heating": "Heating",
+  "news.template.category.electricity": "Electricity",
+  "news.template.category.utilities": "All utilities",
+  "news.template.category.electricityAndElevators": "Electricity and elevators",
+  "news.template.category.elevators": "Elevators",
+  "news.template.category.telephone": "Telephone",
+  "news.template.category.meters": "Meters",
+  "news.template.category.gas": "Gas",
+  "news.template.category.cleaning": "Cleaning",
+  "news.template.category.intercom": "Intercom",
+  "news.template.category.snow": "Snow",
+  "news.template.category.other": "Other",
   "news.type.common": "Common",
   "news.type.emergency": "Еmergency",
   "news.createNews": "Add news",
