--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1688,6 +1688,19 @@
   "news.fields.templates": "Шаблоны",
   "news.fields.profanityInTitle.error": "В заголовке обнаружена ненормативная лексика",
   "news.fields.profanityInBody.error": "В основном тексте обнаружена ненормативная лексика",
+  "news.template.category.water": "Вода",
+  "news.template.category.heating": "Отопление",
+  "news.template.category.electricity": "Электроэнергия",
+  "news.template.category.utilities": "Все коммунальные услуги",
+  "news.template.category.electricityAndElevators": "Электроэнергия и лифты",
+  "news.template.category.elevators": "Лифты",
+  "news.template.category.telephone": "Телефон",
+  "news.template.category.meters": "Счетчики",
+  "news.template.category.gas": "Газ",
+  "news.template.category.cleaning": "Уборка",
+  "news.template.category.intercom": "Домофон",
+  "news.template.category.snow": "Снег",
+  "news.template.category.other": "Другое",
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
   "news.createNews": "Добавить новость",
